--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,10 +19,38 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^3.1.0
-  infinite_listview: ^1.0.0
   flutter_map: any
-
+  flutter_map_tappable_polyline: any
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+  sliding_up_panel: any
+  custom_radio_grouped_button: any
+  after_layout: ^1.0.7
+  infinite_listview: ^1.0.0
+  async: ^2.2.0
+  flutter_staggered_grid_view: ^0.3.0
+  flappy_search_bar: 1.4.1
+  cupertino_icons: ^0.1.2
+  xml: ^3.5.0
+  path_provider: ^1.6.5
+  jinja: ^0.2.0
+  reflectable: ^2.2.1+2
+  poly: ^1.0.5
+  webview_flutter: ^0.3.21
+  flutter_easyloading: ^1.1.4
+  easy_web_view: ^1.2.0
+  flutter_localizations:
+    sdk: flutter
+  provider: ^3.2.0
+  intl: ^0.16.0
+  build_runner: ^1.8.0
+  # rxdart: 0.21.0
+  moor_flutter: ^3.0.0
+  json_annotation: ^3.0.0
+  moor: ^3.0.0
+  sqlparser: ^0.8.0
+  stream_transform: '>=0.0.20 <2.0.0'
+  sprintf: "^4.0.0"
 
 dev_dependencies:
   flutter_test:
